--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Roberto Carlos Rivera | Data & Improvement Portfolio</title>
+  <title>R Carlos Rivera Flores | Data & Improvement Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Playfair+Display:ital,wght@0,600;1,600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
@@ -417,8 +417,8 @@
 
   <header>
     <img src="https://avatars.githubusercontent.com/u/85600401?v=4" alt="Carlos Rivera" class="logo">
-    <h1>Roberto Carlos Rivera</h1>
-    <p class="subtitle">Especialista en Mejora Continua & Analista de Datos | R, Power Platform & BI</p>
+    <h1>R Carlos Rivera Flores</h1>
+    <p class="subtitle"> Analista de Datos | R, Power Platform & BI</p>
     <nav>
       <a href="#proyectos">Portafolio</a>
       <a href="#habilidades">Habilidades</a>
@@ -442,7 +442,7 @@
   </div>
 
   <section id="proyectos">
-    <h2>Proyectos de Mejora</h2>
+    <h2>Proyectos</h2>
     <div class="project-grid">
       
       <div class="project-card" onclick="openModal(1)">
@@ -453,7 +453,7 @@
           <span class="project-role">Rectoría UV</span>
           <h3 class="project-title">Sistema de Inteligencia Institucional Automatizado</h3>
           <div class="impact-badge">
-            <i class="fas fa-arrow-down"></i> -60% Tiempos de Entrega
+            <i class="fas fa-arrow-down"></i> -60% Tiempos de entrega
           </div>
           <p style="font-size: 0.9rem; color: #64748b;">Automatización completa del ciclo de reportes trimestrales utilizando R y dashboards interactivos.</p>
         </div>
@@ -467,12 +467,12 @@
           <i class="fas fa-industry"></i>
         </div>
         <div class="project-content">
-          <span class="project-role">Difrenosa</span>
-          <h3 class="project-title">Automatización de Flujos Operativos (RPA)</h3>
+          <span class="project-role">Sector privado</span>
+          <h3 class="project-title">Automatización de flujos operativos (RPA)</h3>
           <div class="impact-badge">
-            <i class="fas fa-bolt"></i> -40% Carga Operativa
+            <i class="fas fa-bolt"></i> -40% Carga operativa
           </div>
-          <p style="font-size: 0.9rem; color: #64748b;">Eliminación de tareas manuales repetitivas mediante Power Apps y limpieza de datos con scripts.</p>
+          <p style="font-size: 0.9rem; color: #64748b;">Eliminación de tareas manuales repetitivas mediante Power Automate y limpieza de datos maestros</p>
         </div>
         <div class="btn-details">
           Ver caso completo <i class="fas fa-chevron-right" style="font-size: 0.8rem; margin-left: 5px;"></i>
@@ -485,7 +485,7 @@
         </div>
         <div class="project-content">
           <span class="project-role">Consultoría Independiente</span>
-          <h3 class="project-title">Modelado Predictivo y Control Estadístico</h3>
+          <h3 class="project-title">Modelado predictivo y control estadístico</h3>
           <div class="impact-badge">
             <i class="fas fa-bullseye"></i> +15% Precisión
           </div>
@@ -504,7 +504,7 @@
     <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 3rem; text-align: center;">
       <div>
         <i class="fab fa-r-project" style="font-size: 3rem; color: #276dc3; margin-bottom: 1rem;"></i>
-        <h3 style="margin: 0;">R Stats</h3>
+        <h3 style="margin: 0;">R Studio</h3>
         <p style="font-size: 0.9rem; color: #64748b;">Experto</p>
       </div>
       <div>
