--- a/index.html
+++ b/index.html
@@ -504,13 +504,13 @@
     <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 3rem; text-align: center;">
       <div>
         <i class="fab fa-r-project" style="font-size: 3rem; color: #276dc3; margin-bottom: 1rem;"></i>
-        <h3 style="margin: 0;">R Studio</h3>
+        <h3 style="margin: 0;">R Stats</h3>
         <p style="font-size: 0.9rem; color: #64748b;">Experto</p>
       </div>
       <div>
         <i class="fas fa-database" style="font-size: 3rem; color: #e11d48; margin-bottom: 1rem;"></i>
         <h3 style="margin: 0;">SQL & NoSQL</h3>
-        <p style="font-size: 0.9rem; color: #64748b;">Gestión de Datos</p>
+        <p style="font-size: 0.9rem; color: #64748b;">Gestión de datos</p>
       </div>
       <div>
         <i class="fas fa-chart-bar" style="font-size: 3rem; color: #f59e0b; margin-bottom: 1rem;"></i>
@@ -519,16 +519,16 @@
       </div>
       <div>
         <i class="fas fa-cogs" style="font-size: 3rem; color: #059669; margin-bottom: 1rem;"></i>
-        <h3 style="margin: 0;">Power Apps</h3>
+        <h3 style="margin: 0;">Power Automate</h3>
         <p style="font-size: 0.9rem; color: #64748b;">Automatización</p>
       </div>
     </div>
   </section>
 
   <section id="contacto">
-    <h2>Impulsa la Mejora Continua</h2>
+    <h2>¡Impúlsate!</h2>
     <div class="contacto-container">
-      <p style="font-size: 1.2rem; max-width: 600px; margin: 0 auto 2rem;">¿Buscas reducir desperdicios y optimizar tiempos? Hablemos de cómo mis herramientas pueden transformar tu departamento.</p>
+      <p style="font-size: 1.2rem; max-width: 600px; margin: 0 auto 2rem;">¿Buscas ir más allá con tus datos? Hablemos de cómo mis herramientas pueden transformar tus decisiones </p>
       
       <a class="btn-contact whatsapp" href="https://wa.me/525653936212" target="_blank">
         <i class="fab fa-whatsapp"></i> WhatsApp
@@ -541,10 +541,6 @@
       </a>
     </div>
   </section>
-
-  <footer>
-    <p>© 2026 Roberto Carlos Rivera Flores.</p>
-  </footer>
 
   <div class="modal-overlay" id="modalOverlay">
     <div class="modal-content">
@@ -559,13 +555,13 @@
         <div class="privacy-notice">
           <i class="fas fa-shield-alt" style="font-size: 1.5rem;"></i>
           <div>
-            <strong>Privacidad de Datos:</strong> Las imágenes mostradas a continuación son representaciones ilustrativas y genéricas. Los datos reales y sensibles han sido omitidos para cumplir con acuerdos de confidencialidad.
+            <strong>Privacidad de datos:</strong> Las imágenes mostradas a continuación son representaciones ilustrativas y genéricas. Los datos reales y sensibles han sido omitidos para cumplir con acuerdos de confidencialidad.
           </div>
         </div>
 
         <div class="modal-grid">
           <div>
-            <h4 style="color: var(--primary);">El Desafío</h4>
+            <h4 style="color: var(--primary);">El desafío</h4>
             <p id="m-desc" style="color: var(--text-gray); font-size: 0.95rem;">Descripción detallada.</p>
             
             <h4 style="color: var(--primary); margin-top: 1.5rem;">Tecnologías Aplicadas</h4>
@@ -583,7 +579,7 @@
         </div>
 
         <div style="margin-top: 2rem; padding-top: 2rem; border-top: 1px solid #e2e8f0;">
-          <h4 style="color: var(--primary);">Impacto Cuantificable</h4>
+          <h4 style="color: var(--primary);">Impacto cuantificable</h4>
           <p id="m-result" style="font-size: 1.1rem; font-weight: 500; color: var(--accent);"></p>
         </div>
       </div>
@@ -597,21 +593,21 @@
         role: "Rectoría Universidad Veracruzana",
         title: "Sistema de Análisis Institucional",
         desc: "La institución enfrentaba retrasos críticos en la generación de informes trimestrales debido al procesamiento manual de grandes volúmenes de datos. Implementé un sistema integral en R que automatiza la limpieza, transformación y visualización. Esto permitió pasar de semanas de trabajo a un proceso de ejecución casi inmediata, liberando al personal para tareas de análisis estratégico.",
-        techs: ["R Language", "Data Cleaning", "Automatización", "Dashboards"],
+        techs: ["R language", "Limpieza de datos", "Automatización", "Dashboards"],
         result: "Reducción del 60% en el tiempo de elaboración de informes y eliminación total de errores de captura manual."
       },
       2: {
-        role: "Difrenosa",
+        role: "Sector privado",
         title: "Automatización de Flujos Operativos",
         desc: "Se identificaron cuellos de botella en la comunicación interna y procesos repetitivos de aprobación. Diseñé e implementé flujos automatizados con Power Automate y Power Apps que gestionan notificaciones y aprobaciones sin intervención humana. Además, integré scripts para depurar las bases de datos de incidencias.",
-        techs: ["Power Automate", "Power Apps", "Power BI", "Excel Avanzado"],
+        techs: ["Power Automate", "Power BI", "Excel"],
         result: "Optimización del 40% en tiempos operativos y mejora sustancial en la trazabilidad de las incidencias."
       },
       3: {
-        role: "Consultoría Privada",
-        title: "Modelado Predictivo en Salud y Finanzas",
+        role: "Consultoría privada",
+        title: "Modelado predictivo en salud y finanzas",
         desc: "Desarrollo de modelos estadísticos avanzados para clientes externos. Mediante técnicas de inferencia estadística y regresión multivariada, logramos identificar patrones ocultos en históricos de datos clínicos y financieros, permitiendo anticipar escenarios futuros con mayor certeza.",
-        techs: ["Estadística Multivariada", "R", "Machine Learning", "Pruebas de Hipótesis"],
+        techs: ["Estadística multivariada", "R language", "Machine Learning", "Pruebas de Hipótesis", "Limpieza de datos"],
         result: "Incremento del 15% en la precisión de las predicciones, facilitando decisiones basadas en evidencia sólida."
       }
     };
