--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
   <header>
     <img src="https://avatars.githubusercontent.com/u/85600401?v=4" alt="Carlos Rivera" class="logo">
     <h1>R Carlos Rivera Flores</h1>
-    <p class="subtitle"> Analista de Datos | R, Power Platform & BI</p>
+    <p class="subtitle"> Analista de datos | R, Power Platform & BI</p>
     <nav>
       <a href="#proyectos">Portafolio</a>
       <a href="#habilidades">Habilidades</a>
@@ -451,7 +451,7 @@
         </div>
         <div class="project-content">
           <span class="project-role">Rectoría UV</span>
-          <h3 class="project-title">Sistema de Inteligencia Institucional Automatizado</h3>
+          <h3 class="project-title">Sistema de análisis institucional</h3>
           <div class="impact-badge">
             <i class="fas fa-arrow-down"></i> -60% Tiempos de entrega
           </div>
@@ -591,14 +591,14 @@
     const projectsData = {
       1: {
         role: "Rectoría Universidad Veracruzana",
-        title: "Sistema de Análisis Institucional",
+        title: "Sistema de análisis institucional",
         desc: "La institución enfrentaba retrasos críticos en la generación de informes trimestrales debido al procesamiento manual de grandes volúmenes de datos. Implementé un sistema integral en R que automatiza la limpieza, transformación y visualización. Esto permitió pasar de semanas de trabajo a un proceso de ejecución casi inmediata, liberando al personal para tareas de análisis estratégico.",
         techs: ["R language", "Limpieza de datos", "Automatización", "Dashboards"],
         result: "Reducción del 60% en el tiempo de elaboración de informes y eliminación total de errores de captura manual."
       },
       2: {
         role: "Sector privado",
-        title: "Automatización de Flujos Operativos",
+        title: "Automatización de flujos operativos",
         desc: "Se identificaron cuellos de botella en la comunicación interna y procesos repetitivos de aprobación. Diseñé e implementé flujos automatizados con Power Automate y Power Apps que gestionan notificaciones y aprobaciones sin intervención humana. Además, integré scripts para depurar las bases de datos de incidencias.",
         techs: ["Power Automate", "Power BI", "Excel"],
         result: "Optimización del 40% en tiempos operativos y mejora sustancial en la trazabilidad de las incidencias."
