--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
   </section>
 
   <section id="habilidades" style="background: white; border-radius: 2rem; margin-bottom: 4rem;">
-    <h2>Stack Tecnológico</h2>
+    <h2>Stack tecnológico</h2>
     <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 3rem; text-align: center;">
       <div>
         <i class="fab fa-r-project" style="font-size: 3rem; color: #276dc3; margin-bottom: 1rem;"></i>
